@@ -1,3 +1,13 @@
+2003-08-04  Andrew Cagney  <cagney@redhat.com>
+
+	* agentexpr.texi: Delete @bye.
+	* Makefile.in (STABS_DOC_SOURCE_INCLUDES): Add "fdl.texi"
+	(stabs.info): Add $(srcdir) to include search path.
+	(html): Depend on "annotate_toc.html", and not "annotate.html".
+	* stabs.texinfo: Ditto.  Include "fdl.texi".
+	* gdbint.texinfo: Update copyright statement's list of invariant
+	sections.
+
 2003-07-28  Andrew Cagney  <cagney@redhat.com>
 
 	* Makefile.in (INFO_DEPS): Add annotate.info.
